yaml-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp-deployment
  namespace: goapp-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: goapp
  template:
    metadata:
      labels:
        app: goapp
    spec:
      containers:
        - name: goapp
          image: destructor98/goapp:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "500Mi"
            requests:
              cpu: "500m"
              memory: "200Mi"
      serviceAccountName: goapp-serviceaccount
