yaml-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goapp-service
  namespace: goapp-namespace
spec:
  selector:
    app: goapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
