yaml-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goapp-ingress
  namespace: goapp-namespace
spec:
  ingressClassName: nginx
  rules:
    - host: minikube.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: goapp-service
                port:
                  number: 8080
